--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
-    width: 100%;
+    margin: 0px;
+    
 }
 h1{
     font-size: 50px;
@@ -19,4 +20,23 @@ h1{
 
 .half-width img{
     width: 95%;
+}
+
+.top-banner{
+    
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+
+section{
+    height: 500px;
+}
+
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, green,lightgreen);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
 }
